test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: test
  annotations:
    cert-manager.io/issuer: googlecasclusterissuer-sample
    cert-manager.io/issuer-kind: GoogleCASClusterIssuer
    cert-manager.io/issuer-group: cas-issuer.jetstack.io
    cert-manager.io/tls-acme: "false"
    cert-manager.io/common-name: httpd-test-default.apps.ukgcp.dzgff.gcp.redhatworkshops.io
    route.openshift.io/termination: edge
spec:
  rules:
    - host: httpd-example-test.apps.ukgcp.dzgff.gcp.redhatworkshops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd-example
                port:
                  number: 8080
  tls:
  -  hosts:
     -  httpd-example-test.apps.ukgcp.dzgff.gcp.redhatworkshops.io
     secretName: hello-secret-1
